syntax = "proto3";

package greet;
option go_package = "pb";

message GreetRequest { 
  string name = 1;
}

message GreetResponse {
  string message = 1;
}

service GreetService {
  rpc SayGreeting(GreetRequest) returns (GreetResponse) {};
}